--- a/kebo_flujo/pubspec.yaml
+++ b/kebo_flujo/pubspec.yaml
@@ -30,13 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  sign_in_with_apple: ^5.0.0  # Agrega esta línea
+    # Agrega esta línea
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^3.4.0
   firebase_auth: ^5.2.0
+  sign_in_with_apple: ^5.0.0
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
